# DatingBot_latest

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  api_ref  app.py  configuration.py  docker-compose.yml  docker-compose_postgresql.yml  fake_fixtures.py  guide_and_api_reference  pyproject.toml  startup_insert_fixture.py
api/: __init__.py  advertisement.py  api_router.py  auth.py  bot.py  bot_proactive.py  customer.py  customer_origin.py
api/del/: customer_with_operation_with advs.py
config/: conf.py
core/: auth.py
core/alembic/: env.py
core/api/: __init__.py  advertisement.py  api_router.py  auth.py  bot.py  bot_proactive.py  customer.py  customer_origin.py  customer_ormar.py  customer_profile.py  customer_with_operation_with advs.py  index.py  jwt_auth.py  operations.py
core/crud/: advertisement.py  area.py  auth.py  auth_cust.py  customer.py  customer_profile.py  operations.py  redis_channel.py
core/schemas/: __init__.py  advertisement.py  area.py  auth.py  customer.py  customer_profile.py  redis_and_tiers.py
core/services/: api_service.py  bearer_service.py
core/tables/: models.py
crud/: advertisement.py  auth.py  auth_cust.py  customer.py
db/: engine.py  models.py  models_sqlalchemy.py  sqlalchemy_models.py
db/alembic/: env.py
db/fixtures/: areas.yaml
docker_compose_files/: Dockerfile  docker-compose.yml  docker-compose_postgresql.yml
funcs_in_dev/: haversine.py  reverse_geo.py  speeh._recognition.py  streams_consumer.py  streams_producer.py
helpers/: azure_storage.py  constants.py  copyright.py  email.py  exceptions.py  one_time_password.py
lib/: email_helpers.py  messages.py  storage_blob_helper.py
microservices/workers/: Dockerfile  (+3 more)
my_tests/: db_test.py  img_test.py  inspectdb.py  mime_test.py
schemas/: __init__.py  advertisement.py  auth.py  customer.py
settings/: conf.py  logger.py  ms_bot_framework_config.py  redis_client.py  security.py  standalone_bot_adapter.py  tmp.env
setup/: async_sqlalchemy.py  standalone_bot_adapter.py
templates/: index.html
workers/: Dockerfile  configuration.py  requirements.txt
(+120 files in other folders)
